--- a/Topic10/Adicionais/Makefile
+++ b/Topic10/Adicionais/Makefile
@@ -1,7 +1,7 @@
 obj-m +=cod_exem.o
 
 all:
-	make -C /lib/modules/5.4.0-91-generic/build M=$(shell pwd) modules
+	make -C /lib/modules/$(shell uname -r)/build M=$(shell pwd) modules
 
 clean:
-	make -C /lib/modules/5.4.0-91-generic/build M=$(shell pwd) clean
+	make -C /lib/modules/$(shell uname -r)/build M=$(shell pwd) clean
